--- a/my-weather/package.json
+++ b/my-weather/package.json
@@ -9,14 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "antd": "^5.20.0",
-    "less": "^4.1.1",
-    "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "next": "14.2.5"
   },
   "devDependencies": {
-    "babel-plugin-import": "^1.13.8",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
