--- a/my-weather/package.json
+++ b/my-weather/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.20",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
